--- a/style.css
+++ b/style.css
@@ -77,15 +77,19 @@ header{
     text-align: center;
 }
 header .user img{
-    height: 17rem;
-    width: 17rem;
+    height: 28rem;
+    width: 19rem;
     border-radius: 50%;
     object-fit: cover;
     margin-bottom: 1rem;
     border: .7rem solid var(--yellow);
 }
 header .user .post{
-    font-size: 2rem;
+    font-size: 1rem;
+    color: #fff;
+}
+header .user .name{
+    font-size: 3rem;
     color: #fff;
 }
 header .navbar{
@@ -113,14 +117,14 @@ header .navbar ul li a:hover{
     background: #333;
     color: #fff;
     cursor: pointer;
-    font-size: 2.5rem;
-    padding: 1rem 1.5rem;
+    font-size: 3.5rem;
+    padding: 1.5rem 2.5rem;
     z-index:1000;
     display: none;
 }
 .user .img{
     width: max-content;
-    height: max-content;
+    height: 50%;
 }
 @media(max-width:1200px){
 
@@ -156,7 +160,7 @@ header .navbar ul li a:hover{
 
 @media(max-width:400px){
 
-    header{
+    .header{
         width:100vw;
     }
     .heading{
@@ -178,18 +182,18 @@ header .navbar ul li a:hover{
 .home h3{
     font-size:2.5rem;
     color: #fff;
+    justify-content: center;
     }
 .home h1{
 font-size: 5rem;
 color: #fff;
+justify-content: center;
 }
-/*.home h1 span{
-
-}*/
 .home p{
-    font-size: 2rem;
+    font-size: 4rem;
     color: #eee;
-    padding:1rem 0;
+    padding:2rem 0;
+    justify-content: right;
     }
 .about .row{
 display: flex;
@@ -208,6 +212,7 @@ padding: 1rem 0;
     color: var(--yellow);
     padding: 1rem 0;
     font-weight: normal;
+    justify-content: center;
 }
 .about .row .info h3 span{
 color: #eee;
@@ -242,31 +247,31 @@ color: var(--yellow);
         padding: 1rem 0;
         padding-left: 3rem;
     }
-    education .box-container .box{
+    .education .box-container .box{
         width: 27rem;
         margin: 4rem 1rem;
         padding-left: 4rem;
         border-left: .2rem solid #fff;
         position: relative;
     }
-    education .box-container .box span{
+    .education .box-container .box span{
         font-size: 1.3rem;
-        background: #222;
+        background: #170202;
         color: #fff;
         border-radius: 5rem;
         padding: 5rem 2.5rem;
     }
-    education .box-container .box h3{
+    .education .box-container .box h3{
         font-size: 2rem;
         color: #fff;
         padding-top: 1.5rem;
     }
-    education .box-container .box p{
+    .education .box-container .box p{
         font-size: 1.4rem;
         color: #eee;
         padding-top: 1rem 0; 
     }
-    education .box-container .box i{
+    .education .box-container .box i{
         position: absolute;
         top: -1.5rem; left: -2.5rem;
         height: 5rem;
@@ -302,11 +307,23 @@ color: var(--yellow);
      transform: scale(1.2);
     }
     .portfolio .box-container .box{
-        width: 100%;
+        width: 50%;
+       height:50%;
+       justify-content:center;
     }
     .contact .row form .message{
         height: 15rem;
         resize: none;
+    }
+    .contact .row .content{
+        flex:1 1 30rem;
+        padding: 4rem;
+        padding-bottom:0;
+    }
+    .contact .row form{
+        flex:1 1 45rem;
+        padding:2rem;
+        margin:2rem;
     }
     .contact .row .content .title{
         text-transform: uppercase;
@@ -326,11 +343,21 @@ color: var(--yellow);
       padding-right: 1rem;
       color: var(--yellow);
     }
-    .contact .row form .box::placeholder{
+    .content .row form .box::placeholder{
         text-transform: capitalize;
     }
-    .contact .row form{
+    .content .row form{
         margin: 3rem 0;
+    }
+    .content .row form .box{
+        padding:1rem;
+        margin:1rem 0;
+        background:#3333;
+        color:#fff;
+        text-transform:none;
+    }
+    .content .title .info{
+        justify-content: center;
     }
 .top{
     position: fixed;
